--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue-tsx-support": "^2.3.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
@@ -30,6 +31,8 @@
     "sass-loader": "^8.0.0",
     "typescript": "~3.5.3",
     "vue-cli-plugin-bootstrap": "^1.0.0-alpha.0",
+    "vue-cli-plugin-tsx-support": "^0.4.1",
+    "vue-jsx-hot-loader": "^1.4.1",
     "vue-template-compiler": "^2.6.10"
   }
 }
