--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.2",
+    "html-formatter": "^0.1.9",
     "popper.js": "^1.16.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
